--- a/index.html
+++ b/index.html
@@ -3,9 +3,140 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prueba de Gulp</title>
+    <title>Document</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Lato", sans-serif;
+      }
+
+      .container {
+        display: flex;
+      }
+
+      .container .item {
+        display: flex;
+        flex: 1;
+        justify-content: space-between;
+        border: 1px solid gray;
+        border-radius: 5px;
+        margin: 10px;
+      }
+
+      .container .item .content {
+        display: flex;
+      }
+
+      .container .item .content .metadata {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 20px;
+      }
+
+      .container .item .content .metadata .title {
+        margin: 0px;
+      }
+
+      .container .item .btn-group {
+        display: flex;
+        align-items: flex-end;
+        align-items: center;
+      }
+
+      .container .item .btn-group .button {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        width: 42px;
+        justify-content: center;
+        font-size: 2em;
+      }
+
+      .container .item .btn-group .button a {
+        color: lightseagreen;
+        text-decoration: none;
+      }
+
+      .container .item .btn-group .button:hover {
+        background-color: lightslategray;
+        cursor: pointer;
+      }
+
+      .container .item .btn-group .button:hover a {
+        color: #fff;
+      }
+
+      .item.featured {
+        flex: auto;
+      }
+
+      .item.associated {
+        flex: initial;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hola Flexbox, este curso es divertido</h1>
+    <div class="container">
+      <div class="item featured">
+        <div class="content">
+          <img
+            src="https://d32xj74kbqkoqn.cloudfront.net/uploads/campsite/campsite_image/129/dissecting-rails-icon.jpg"
+            width="200px"
+            height="120px"
+          />
+          <div class="metadata">
+            <h1 class="title">My amazing title</h1>
+            <h3>And a subtitle</h3>
+          </div>
+        </div>
+        <div class="btn-group">
+          <div class="button">
+            <a href="#">
+              <i class="fa-solid fa-circle-plus"></i>
+            </a>
+          </div>
+          <div class="button">
+            <a href="#">
+              <i class="fa-solid fa-circle-xmark"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="item associated">
+        <div class="content">
+          <img
+            src="https://d32xj74kbqkoqn.cloudfront.net/uploads/guide/video_image/43/foundations-video-thumb.jpg"
+            width="200px"
+            height="120px"
+          />
+          <div class="metadata">
+            <h1 class="title">Another amazing post</h1>
+          </div>
+        </div>
+        <div class="btn-group">
+          <div class="button">
+            <a href="#">
+              <i class="fa-solid fa-circle-plus"></i>
+            </a>
+          </div>
+          <div class="button">
+            <a href="#">
+              <i class="fa-solid fa-circle-xmark"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
